# cookiecutter-kedro

./: .gitignore  README.md  cookiecutter.json  cpu.dockerfile  docker-compose.yml  kedro_cli.py  pyproject.toml  setup.cfg
notebooks/: Untitled.ipynb  sample.ipynb
src/: setup.py
src/kedro_sandbox/: pipeline.py  run.py
src/kedro_sandbox/pipelines/data_engineering/: nodes.py  pipeline.py
src/tests/: test_run.py
{{cookiecutter.project_name}}/: .env.example  .kedro.yml  Procfile  README.md  cpu.dockerfile  docker-compose.yml  kedro_cli.py  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_name}}/notebooks/: sample.ipynb
{{cookiecutter.project_name}}/src/kedro_sandbox/: __init__.py
{{cookiecutter.project_name}}/src/tests/: test_run.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  run.py
