[tool.poetry]
name = "kedro-sanbdox"
version = "0.1.0"
description = ""
authors = ["chck <shimekiri.today@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6, <3.8"
kedro = "^0.15.5"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
autoflake = "^1.3.1"
black = "^19.10b0"
mypy = "^0.761"
vulture = "^1.2"
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
