[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.github_username}}"]

[tool.poetry.dependencies]
python = ">=3.6, <3.8"
kedro = "^0.15.5"
jupyterlab = "^1.2.5"
jupyter-tensorboard = "^0.1.10"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
autoflake = "^1.3.1"
black = "^19.10b0"
mypy = "^0.761"
vulture = "^1.2"
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
pytest-xdist = "^1.31.0"
ipywidgets = "^7.5.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
