[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.github_user_name}}"]

[tool.poetry.dependencies]
python = ">=3.6, <3.8"
kedro = "^0.15.5"
kedro-viz = "^3.1.0"
honcho = "^1.0.1"
python-dotenv = "^0.11.0"
jupyterlab = { version = "^1.2.6", optional = true }
jupyter_nbextensions_configurator = { version = "^0.4.1", optional = true }
jupyter-tensorboard = { version = "^0.1.10", optional = true }
plotly = { version = "^4.5.0", optional = true }
ipywidgets = { version = "^7.5.1", optional = true }
nbbrowserpdf = { version = "^0.2.0", optional = true }

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
autoflake = "^1.3.1"
black = "^19.10b0"
mypy = "^0.761"
vulture = "^1.2"
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
pytest-xdist = "^1.31.0"

[tool.poetry.extras]
jupyter = ["jupyterlab", "jupyter_nbextensions_configurator", "jupyter-tensorboard", "plotly", "ipywidgets", "nbbrowserpdf"]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
